user auth+transaction+budget cmp
